# polly-memo-fastapi

./: .gitignore  BAOTA_DEPLOYMENT.md  CONFIG.md  DOCKER_DEPLOYMENT.md  Dockerfile  LOGGING.md  PORT_CONFIGURATION.md  README-Docker.md  README.md  docker-build.sh  docker-compose.prod.yml  docker-compose.yml  main.py  pyproject.toml
.cursor/rules/: api-endpoints.mdc  fastapi-development.mdc  fastapi-project.mdc  polly-memo-project.mdc  python-style.mdc
app/api/v1/: router.py
app/api/v1/endpoints/: analysis.py  glm4.py  media.py
app/core/: auth.py  config.py
app/schemas/: analysis.py  glm4.py  media.py
app/services/: analysis_service.py  glm4_service.py  media_service.py
app/utils/: __init__.py  cos_client.py
configs/: baota_nginx_site.conf
nginx/: nginx.conf
nginx/conf.d/: default.conf
scripts/: baota_install.sh  deploy.sh  generate_api_key.py  update.sh
scripts/textbooks_import/: textbook_workflow.py
