[project]
name = "polly-memo-fastapi"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.116.1",
    "ffmpeg-python>=0.2.0",
    "supabase>=2.5.0",
    "python-multipart>=0.0.10",
    "pydantic-settings>=2.5.0",
    "aiofiles>=24.1.0",
    "aiohttp>=3.9.0",
    "httpx>=0.24.0",
]
