[project]
name = "polly-memo-fastapi"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.116.1",
    "ffmpeg-python>=0.2.0",
    "python-multipart>=0.0.10",
    "pydantic-settings>=2.5.0",
    "aiofiles>=24.1.0",
    "aiohttp>=3.9.0",
    "httpx>=0.24.0",
    "docx>=0.2.4",
    "python-docx>=1.2.0",
    "cos-python-sdk-v5>=1.9.38",
    "uvicorn>=0.35.0",
]
